create a dataframe with the pca values

--- a/crypto_investments.ipynb
+++ b/crypto_investments.ipynb
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
        "       [-1.15779997,  2.04120919,  1.85971527]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,15 +1258,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.3719856 , 0.34700813, 0.17603793])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Retrieve the explained variance to determine how much information \n",
-    "# can be attributed to each principal component.\n"
+    "pca.explained_variance_ratio_\n"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8950316570309841"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(pca.explained_variance_ratio_)"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1274,29 +1306,115 @@
     "\n",
     "**Question:** What is the total explained variance of the three principal components?\n",
     "\n",
-    "**Answer:** # YOUR ANSWER HERE!"
+    "**Answer:** The total explained variance of the three principal components is 89.5%."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pca1</th>\n",
+       "      <th>pca2</th>\n",
+       "      <th>pca3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>coin_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bitcoin</th>\n",
+       "      <td>-0.600667</td>\n",
+       "      <td>0.842760</td>\n",
+       "      <td>0.461595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ethereum</th>\n",
+       "      <td>-0.458261</td>\n",
+       "      <td>0.458466</td>\n",
+       "      <td>0.952877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tether</th>\n",
+       "      <td>-0.433070</td>\n",
+       "      <td>-0.168126</td>\n",
+       "      <td>-0.641752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ripple</th>\n",
+       "      <td>-0.471835</td>\n",
+       "      <td>-0.222660</td>\n",
+       "      <td>-0.479053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bitcoin-cash</th>\n",
+       "      <td>-1.157800</td>\n",
+       "      <td>2.041209</td>\n",
+       "      <td>1.859715</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  pca1      pca2      pca3\n",
+       "coin_id                                   \n",
+       "bitcoin      -0.600667  0.842760  0.461595\n",
+       "ethereum     -0.458261  0.458466  0.952877\n",
+       "tether       -0.433070 -0.168126 -0.641752\n",
+       "ripple       -0.471835 -0.222660 -0.479053\n",
+       "bitcoin-cash -1.157800  2.041209  1.859715"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a new DataFrame with the PCA data.\n",
     "# Note: The code for this step is provided for you\n",
     "\n",
     "# Creating a DataFrame with the PCA data\n",
-    "# YOUR CODE HERE!\n",
+    "df_pca = pd.DataFrame(\n",
+    "    pca_data,\n",
+    "    #index=df_market_data_scaled.index,\n",
+    "    columns=['pca1','pca2','pca3']\n",
+    ")\n",
     "\n",
     "# Copy the crypto names from the original data\n",
-    "# YOUR CODE HERE!\n",
+    "df_pca['coin_id']=df_market_data_scaled.index\n",
     "\n",
     "# Set the coinid column as index\n",
-    "# YOUR CODE HERE!\n",
+    "df_pca = df_pca.set_index('coin_id')\n",
     "\n",
     "# Display sample data\n",
-    "# YOUR CODE HERE!"
+    "df_pca.head()"
    ]
   },
   {
