--- a/crypto_investments.ipynb
+++ b/crypto_investments.ipynb
@@ -1441,28 +1441,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a list with the number of k-values to try\n",
     "# Use a range from 1 to 11\n",
-    "# YOUR CODE HERE!"
+    "k=range(1,11)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create an empy list to store the inertia values\n",
-    "# YOUR CODE HERE!"
+    "inertia=[]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,46 +1471,100 @@
     "# 1. Create a KMeans model using the loop counter for the n_clusters\n",
     "# 2. Fit the model to the data using `df_market_data_pca`\n",
     "# 3. Append the model.inertia_ to the inertia list\n",
-    "# YOUR CODE HERE!"
+    "for i in k:\n",
+    "    k_model=KMeans(n_clusters=i)\n",
+    "    k_model.fit(df_pca)\n",
+    "    inertia.append(k_model.inertia_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a dictionary with the data to plot the Elbow curve\n",
-    "# YOUR CODE HERE!\n",
+    "k_dict={'k':k,'inertia':inertia}\n",
     "\n",
     "# Create a DataFrame with the data to plot the Elbow curve\n",
-    "# YOUR CODE HERE!"
+    "k_df=pd.DataFrame(k_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {},
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.holoviews_exec.v0+json": "",
+      "text/html": [
+       "<div id='3013'>\n",
+       "  <div class=\"bk-root\" id=\"d5b25f92-e713-4c23-a241-ac92f50fd96e\" data-root-id=\"3013\"></div>\n",
+       "</div>\n",
+       "<script type=\"application/javascript\">(function(root) {\n",
+       "  function embed_document(root) {\n",
+       "    var docs_json = {\"9b02135b-2ab2-4917-9c71-f4e2e455f3e1\":{\"defs\":[{\"extends\":null,\"module\":null,\"name\":\"ReactiveHTML1\",\"overrides\":[],\"properties\":[]},{\"extends\":null,\"module\":null,\"name\":\"FlexBox1\",\"overrides\":[],\"properties\":[{\"default\":\"flex-start\",\"kind\":null,\"name\":\"align_content\"},{\"default\":\"flex-start\",\"kind\":null,\"name\":\"align_items\"},{\"default\":\"row\",\"kind\":null,\"name\":\"flex_direction\"},{\"default\":\"wrap\",\"kind\":null,\"name\":\"flex_wrap\"},{\"default\":\"flex-start\",\"kind\":null,\"name\":\"justify_content\"}]},{\"extends\":null,\"module\":null,\"name\":\"GridStack1\",\"overrides\":[],\"properties\":[{\"default\":\"warn\",\"kind\":null,\"name\":\"mode\"},{\"default\":null,\"kind\":null,\"name\":\"ncols\"},{\"default\":null,\"kind\":null,\"name\":\"nrows\"},{\"default\":true,\"kind\":null,\"name\":\"allow_resize\"},{\"default\":true,\"kind\":null,\"name\":\"allow_drag\"},{\"default\":[],\"kind\":null,\"name\":\"state\"}]},{\"extends\":null,\"module\":null,\"name\":\"click1\",\"overrides\":[],\"properties\":[{\"default\":\"\",\"kind\":null,\"name\":\"terminal_output\"},{\"default\":\"\",\"kind\":null,\"name\":\"debug_name\"},{\"default\":0,\"kind\":null,\"name\":\"clears\"}]},{\"extends\":null,\"module\":null,\"name\":\"NotificationAreaBase1\",\"overrides\":[],\"properties\":[{\"default\":\"bottom-right\",\"kind\":null,\"name\":\"position\"},{\"default\":0,\"kind\":null,\"name\":\"_clear\"}]},{\"extends\":null,\"module\":null,\"name\":\"NotificationArea1\",\"overrides\":[],\"properties\":[{\"default\":[],\"kind\":null,\"name\":\"notifications\"},{\"default\":\"bottom-right\",\"kind\":null,\"name\":\"position\"},{\"default\":0,\"kind\":null,\"name\":\"_clear\"},{\"default\":[{\"background\":\"#ffc107\",\"icon\":{\"className\":\"fas fa-exclamation-triangle\",\"color\":\"white\",\"tagName\":\"i\"},\"type\":\"warning\"},{\"background\":\"#007bff\",\"icon\":{\"className\":\"fas fa-info-circle\",\"color\":\"white\",\"tagName\":\"i\"},\"type\":\"info\"}],\"kind\":null,\"name\":\"types\"}]},{\"extends\":null,\"module\":null,\"name\":\"Notification\",\"overrides\":[],\"properties\":[{\"default\":null,\"kind\":null,\"name\":\"background\"},{\"default\":3000,\"kind\":null,\"name\":\"duration\"},{\"default\":null,\"kind\":null,\"name\":\"icon\"},{\"default\":\"\",\"kind\":null,\"name\":\"message\"},{\"default\":null,\"kind\":null,\"name\":\"notification_type\"},{\"default\":false,\"kind\":null,\"name\":\"_destroyed\"}]},{\"extends\":null,\"module\":null,\"name\":\"TemplateActions1\",\"overrides\":[],\"properties\":[{\"default\":0,\"kind\":null,\"name\":\"open_modal\"},{\"default\":0,\"kind\":null,\"name\":\"close_modal\"}]},{\"extends\":null,\"module\":null,\"name\":\"MaterialTemplateActions1\",\"overrides\":[],\"properties\":[{\"default\":0,\"kind\":null,\"name\":\"open_modal\"},{\"default\":0,\"kind\":null,\"name\":\"close_modal\"}]}],\"roots\":{\"references\":[{\"attributes\":{},\"id\":\"3039\",\"type\":\"ResetTool\"},{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"HSpacer02837\",\"sizing_mode\":\"stretch_width\"},\"id\":\"3073\",\"type\":\"Spacer\"},{\"attributes\":{},\"id\":\"3023\",\"type\":\"LinearScale\"},{\"attributes\":{\"tools\":[{\"id\":\"3017\"},{\"id\":\"3035\"},{\"id\":\"3036\"},{\"id\":\"3037\"},{\"id\":\"3038\"},{\"id\":\"3039\"}]},\"id\":\"3041\",\"type\":\"Toolbar\"},{\"attributes\":{},\"id\":\"3070\",\"type\":\"UnionRenderers\"},{\"attributes\":{\"coordinates\":null,\"group\":null,\"text\":\"Inertia values for k 1-10\",\"text_color\":\"black\",\"text_font_size\":\"12pt\"},\"id\":\"3019\",\"type\":\"Title\"},{\"attributes\":{\"line_color\":\"#30a2da\",\"line_width\":2,\"x\":{\"field\":\"k\"},\"y\":{\"field\":\"inertia\"}},\"id\":\"3056\",\"type\":\"Line\"},{\"attributes\":{\"bottom_units\":\"screen\",\"coordinates\":null,\"fill_alpha\":0.5,\"fill_color\":\"lightgrey\",\"group\":null,\"left_units\":\"screen\",\"level\":\"overlay\",\"line_alpha\":1.0,\"line_color\":\"black\",\"line_dash\":[4,4],\"line_width\":2,\"right_units\":\"screen\",\"syncable\":false,\"top_units\":\"screen\"},\"id\":\"3040\",\"type\":\"BoxAnnotation\"},{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"HSpacer02836\",\"sizing_mode\":\"stretch_width\"},\"id\":\"3014\",\"type\":\"Spacer\"},{\"attributes\":{\"axis\":{\"id\":\"3031\"},\"coordinates\":null,\"dimension\":1,\"grid_line_color\":null,\"group\":null,\"ticker\":null},\"id\":\"3034\",\"type\":\"Grid\"},{\"attributes\":{},\"id\":\"3025\",\"type\":\"LinearScale\"},{\"attributes\":{\"axis_label\":\"k\",\"coordinates\":null,\"formatter\":{\"id\":\"3058\"},\"group\":null,\"major_label_policy\":{\"id\":\"3059\"},\"ticker\":{\"id\":\"3028\"}},\"id\":\"3027\",\"type\":\"LinearAxis\"},{\"attributes\":{\"line_alpha\":0.2,\"line_color\":\"#30a2da\",\"line_width\":2,\"x\":{\"field\":\"k\"},\"y\":{\"field\":\"inertia\"}},\"id\":\"3053\",\"type\":\"Line\"},{\"attributes\":{},\"id\":\"3028\",\"type\":\"BasicTicker\"},{\"attributes\":{},\"id\":\"3059\",\"type\":\"AllLabels\"},{\"attributes\":{\"axis\":{\"id\":\"3027\"},\"coordinates\":null,\"grid_line_color\":null,\"group\":null,\"ticker\":null},\"id\":\"3030\",\"type\":\"Grid\"},{\"attributes\":{\"end\":10.0,\"reset_end\":10.0,\"reset_start\":1.0,\"start\":1.0,\"tags\":[[[\"k\",\"k\",null]]]},\"id\":\"3015\",\"type\":\"Range1d\"},{\"attributes\":{\"data\":{\"inertia\":{\"__ndarray__\":\"EAAmQfwNcEBMVJAi3bxkQPYsl3eTcVdAmIiJ/i7VSEDWFmXIevBCQAr0Rtm+uTtATjPjE6wxNUAPw/XtE0kxQLDExH0TVitAKdPWkEP4JEA=\",\"dtype\":\"float64\",\"order\":\"little\",\"shape\":[10]},\"k\":[1,2,3,4,5,6,7,8,9,10]},\"selected\":{\"id\":\"3049\"},\"selection_policy\":{\"id\":\"3070\"}},\"id\":\"3048\",\"type\":\"ColumnDataSource\"},{\"attributes\":{},\"id\":\"3032\",\"type\":\"BasicTicker\"},{\"attributes\":{\"axis_label\":\"inertia\",\"coordinates\":null,\"formatter\":{\"id\":\"3061\"},\"group\":null,\"major_label_policy\":{\"id\":\"3062\"},\"ticker\":{\"id\":\"3032\"}},\"id\":\"3031\",\"type\":\"LinearAxis\"},{\"attributes\":{},\"id\":\"3061\",\"type\":\"BasicTickFormatter\"},{\"attributes\":{\"end\":281.5130050760841,\"reset_end\":281.5130050760841,\"reset_start\":-14.154029022214639,\"start\":-14.154029022214639,\"tags\":[[[\"inertia\",\"inertia\",null]]]},\"id\":\"3016\",\"type\":\"Range1d\"},{\"attributes\":{},\"id\":\"3035\",\"type\":\"SaveTool\"},{\"attributes\":{\"source\":{\"id\":\"3048\"}},\"id\":\"3055\",\"type\":\"CDSView\"},{\"attributes\":{},\"id\":\"3049\",\"type\":\"Selection\"},{\"attributes\":{\"children\":[{\"id\":\"3014\"},{\"id\":\"3018\"},{\"id\":\"3073\"}],\"margin\":[0,0,0,0],\"name\":\"Row02832\",\"tags\":[\"embedded\"]},\"id\":\"3013\",\"type\":\"Row\"},{\"attributes\":{},\"id\":\"3062\",\"type\":\"AllLabels\"},{\"attributes\":{\"line_alpha\":0.1,\"line_color\":\"#30a2da\",\"line_width\":2,\"x\":{\"field\":\"k\"},\"y\":{\"field\":\"inertia\"}},\"id\":\"3052\",\"type\":\"Line\"},{\"attributes\":{},\"id\":\"3036\",\"type\":\"PanTool\"},{\"attributes\":{\"callback\":null,\"renderers\":[{\"id\":\"3054\"}],\"tags\":[\"hv_created\"],\"tooltips\":[[\"k\",\"@{k}\"],[\"inertia\",\"@{inertia}\"]]},\"id\":\"3017\",\"type\":\"HoverTool\"},{\"attributes\":{},\"id\":\"3037\",\"type\":\"WheelZoomTool\"},{\"attributes\":{\"line_color\":\"#30a2da\",\"line_width\":2,\"x\":{\"field\":\"k\"},\"y\":{\"field\":\"inertia\"}},\"id\":\"3051\",\"type\":\"Line\"},{\"attributes\":{},\"id\":\"3058\",\"type\":\"BasicTickFormatter\"},{\"attributes\":{\"below\":[{\"id\":\"3027\"}],\"center\":[{\"id\":\"3030\"},{\"id\":\"3034\"}],\"height\":300,\"left\":[{\"id\":\"3031\"}],\"margin\":[5,5,5,5],\"min_border_bottom\":10,\"min_border_left\":10,\"min_border_right\":10,\"min_border_top\":10,\"renderers\":[{\"id\":\"3054\"}],\"sizing_mode\":\"fixed\",\"title\":{\"id\":\"3019\"},\"toolbar\":{\"id\":\"3041\"},\"width\":700,\"x_range\":{\"id\":\"3015\"},\"x_scale\":{\"id\":\"3023\"},\"y_range\":{\"id\":\"3016\"},\"y_scale\":{\"id\":\"3025\"}},\"id\":\"3018\",\"subtype\":\"Figure\",\"type\":\"Plot\"},{\"attributes\":{\"overlay\":{\"id\":\"3040\"}},\"id\":\"3038\",\"type\":\"BoxZoomTool\"},{\"attributes\":{\"coordinates\":null,\"data_source\":{\"id\":\"3048\"},\"glyph\":{\"id\":\"3051\"},\"group\":null,\"hover_glyph\":null,\"muted_glyph\":{\"id\":\"3053\"},\"nonselection_glyph\":{\"id\":\"3052\"},\"selection_glyph\":{\"id\":\"3056\"},\"view\":{\"id\":\"3055\"}},\"id\":\"3054\",\"type\":\"GlyphRenderer\"}],\"root_ids\":[\"3013\"]},\"title\":\"Bokeh Application\",\"version\":\"2.4.3\"}};\n",
+       "    var render_items = [{\"docid\":\"9b02135b-2ab2-4917-9c71-f4e2e455f3e1\",\"root_ids\":[\"3013\"],\"roots\":{\"3013\":\"d5b25f92-e713-4c23-a241-ac92f50fd96e\"}}];\n",
+       "    root.Bokeh.embed.embed_items_notebook(docs_json, render_items);\n",
+       "  }\n",
+       "  if (root.Bokeh !== undefined && root.Bokeh.Panel !== undefined) {\n",
+       "    embed_document(root);\n",
+       "  } else {\n",
+       "    var attempts = 0;\n",
+       "    var timer = setInterval(function(root) {\n",
+       "      if (root.Bokeh !== undefined && root.Bokeh.Panel !== undefined) {\n",
+       "        clearInterval(timer);\n",
+       "        embed_document(root);\n",
+       "      } else if (document.readyState == \"complete\") {\n",
+       "        attempts++;\n",
+       "        if (attempts > 200) {\n",
+       "          clearInterval(timer);\n",
+       "          console.log(\"Bokeh: ERROR: Unable to run BokehJS code because BokehJS library is missing\");\n",
+       "        }\n",
+       "      }\n",
+       "    }, 25, root)\n",
+       "  }\n",
+       "})(window);</script>"
+      ],
+      "text/plain": [
+       ":Curve   [k]   (inertia)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {
+      "application/vnd.holoviews_exec.v0+json": {
+       "id": "3013"
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Plot a line chart with all the inertia values computed with \n",
     "# the different values of k to visually identify the optimal value for k.\n",
-    "# YOUR CODE HERE!"
+    "k_df.hvplot(x='k',y='inertia',title='Inertia values for k 1-10')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Answer the following questions: What is the best value for k when using the PCA data? Does it differ from the best k value found using the original data?\n",
     "* **Question:** What is the best value for `k` when using the PCA data?\n",
     "\n",
-    "  * **Answer:** # YOUR ANSWER HERE!\n",
+    "  * **Answer:** The best value for `k` when using the PCA data is 4.\n",
     "\n",
     "\n",
     "* **Question:** Does it differ from the best k value found using the original data?\n",
     "\n",
-    "  * **Answer:** # YOUR ANSWER HERE!"
+    "  * **Answer:** No."
    ]
   },
   {
